[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
fskit = "0.2.0"

[patch.crates-io]
# egui_ltreeview = { git = "https://github.com/landaire-contrib/egui_ltreeview", branch = "large_node_perf_fix" }
# egui_ltreeview = { path = "/Users/lander/src/egui_ltreeview" }
vfs = { git = "https://github.com/landaire/rust-vfs.git", branch = "push-pkquslyvkqot" }
#vfs = { version = "0.12.1", path = "../../src/rust-vfs" }
#fskit = { path = "G:/dev/fskit" }
