[package]
name = "enfusion_pak"
description = "A library/cli for reading Enfusion game engine `.pak` files."
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/landaire/enfusion_tools"
authors = ["Lander Brandt"]
documentation = "https://docs.rs/enfusion_pak"
homepage = "https://landaire.github.io/enfusion_tools"
license = "MIT OR Apache-2.0"
keywords = ["arma", "reforger", "enfusion"]

[[bin]]
name = "enfusion_pak"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
jiff = "0.2.10"
kinded = "0.3.0"
thiserror = "2.0.12"
variantly = "0.4.0"
winnow = "0.7.7"
log = "0.4.27"

# vfs-general
vfs = { version = "0.12.1", optional = true }
flate2 = { version = "1.1.1", optional = true }

# Async
async-trait = {version = "0.1.88", optional = true }
async-std = { version = "1.13.1", optional = true }

# Bin
memmap2 = { version = "0.9.5", optional = true }
color-eyre = { version = "0.6", optional = true }
humansize = { version = "2.0.0", optional = true }
clap = { version = "4.5.37", features = ["derive"], optional = true }

[features]
default = ["vfs"]
arc = []
async_vfs = ["vfs/async-vfs", "arc", "dep:flate2", "dep:async-std", "dep:async-trait"]
vfs = ["arc", "dep:vfs", "dep:flate2"]
bin = ["dep:clap", "dep:color-eyre", "dep:memmap2", "dep:humansize", "dep:async-trait", "async_vfs"]
