[package]
name = "enfusion_pak"
description = "A library/cli for reading Enfusion game engine `.pak` files."
version = "0.2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/landaire/enfusion_tools"
authors = ["Lander Brandt"]
documentation = "https://docs.rs/enfusion_pak"
homepage = "https://landaire.github.io/enfusion_tools"
license = "MIT OR Apache-2.0"
keywords = ["arma", "reforger", "enfusion"]

[[bin]]
name = "enfusion_pak"
path = "src/main.rs"
required-features = ["bin"]

[[example]]
name = "dump_file"
path = "examples/dump_file/main.rs"
required-features = ["async_vfs"]

[dependencies]
jiff = "0.2.10"
kinded = "0.3.0"
thiserror = "2.0.12"
variantly = "0.4.0"
winnow = "0.7.7"
log = "0.4.27"

# vfs-general
fskit = { workspace = true, optional = true, features = ["vfs"] }
vfs = { version = "0.13.0", optional = true }
flate2 = { version = "1.1.1", optional = true }

# Async
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
oval = { version = "2.0.0", optional = true }

# Bin
memmap2 = { version = "0.9.5", optional = true }
color-eyre = { version = "0.6", optional = true }
humansize = { version = "2.0.0", optional = true }
clap = { version = "4.5.37", features = ["derive"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
# For running examples
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros", "fs"] }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
memmap2 = "0.9.8"



[features]
default = ["vfs"]
arc = []
async_vfs = ["vfs/async-vfs", "fskit/async-vfs", "arc", "vfs", "dep:futures", "dep:flate2", "dep:async-trait"]
vfs = ["arc", "dep:vfs", "dep:flate2", "dep:fskit", "dep:oval"]
bin = ["dep:clap", "dep:color-eyre", "dep:memmap2", "dep:humansize", "dep:async-trait", "async_vfs"]
